2011-12-03  Ulrich Drepper  <drepper@gmail.com>

	* inet/netinet/in.h: Provide versions of IN6_IS_ADDR_UNSPECIFIED,
	IN6_IS_ADDR_LOOPBACK, IN6_IS_ADDR_LINKLOCAL, IN6_IS_ADDR_SITELOCAL,
	IN6_IS_ADDR_V4MAPPED, IN6_IS_ADDR_V4COMPAT, and IN6_ARE_ADDR_EQUAL
	for gcc to avoid warnings.
	* inet/Makefile (tests): Add tst-checks.
	* inet/tst-checks.c: New file.

	* sysdeps/generic/dl-hash.h (_dl_elf_hash): Add attribute to avoid
	warning.

	* sysdeps/x86_64/multiarch/wmemcmp-c.c: Provide prototype for
	__wmemcmp_sse2.

	* sysdeps/x86_64/fpu/s_scalbln.c: Removed.
	* sysdeps/x86_64/fpu/s_scalbn.c: Removed.

	* malloc/mcheck.h: Fix use of incorrect encoding in comment.

2011-12-02  Ulrich Drepper  <drepper@gmail.com>

	* nis/nis_findserv.c (__nis_findfastest_with_timeout): Avoid aliasing
	problem.

	* nscd/aicache.c (addhstaiX): Avoid unused variable warning.

2011-11-29  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/sh/bits/atomic.h (rNOSP): Define
	conditional on GCC version.
	(__arch_compare_and_exchange_val_8_acq)
	(__arch_compare_and_exchange_val_16_acq)
	(__arch_compare_and_exchange_val_32_acq, atomic_exchange_and_add)
	(atomic_add, atomic_add_negative, atomic_add_zero, atomic_bit_set)
	(atomic_bit_test_set): Use rNOSP instead of "r" constraints.

2011-12-02  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/sh/backtrace.c: New file.

2011-12-02  Andreas Schwab  <schwab@redhat.com>

	* misc/bits/select2.h (__FD_ELT): Mark as extension.  Add
	parenthesis.

2011-12-01  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/futimes.c: Truncate time values when
	falling back to utime.

2011-11-30  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/s390/fpu/libm-test-ulps: Relax cpow (2 + 3 i, 4 + 0 i)
	expectations for float.

2011-11-29  Andreas Schwab  <schwab@redhat.com>

	* locale/weight.h (findidx): Add parameter len.
	* locale/weightwc.h (findidx): Likewise.
	* posix/fnmatch_loop.c (FCT): Adjust caller.