@@ -1,3 +1,9 @@
+2011-12-04  Ulrich Drepper  <drepper@gmail.com>
+
+	* sunrpc/clnt_unix.c (clntunix_control): Fix aliasing issues.
+	* sunrpc/clnt_tcp.c (clnttcp_control): Likewise.
+	* sunrpc/clnt_udp.c (clntudp_call): Likewise.
+
 2011-12-03  Ulrich Drepper  <drepper@gmail.com>
 
 	* inet/netinet/in.h: Provide versions of IN6_IS_ADDR_UNSPECIFIED,
